# OOP_LAB1

./: CMakeLists.txt  LICENSE  README.md  arr_string.cpp  arr_string.h  main.cpp
